# ds4

./: .gitignore  README.md  SETUP.md  pyproject.toml
01_activities/: dataset_modelling_all.ipynb  dataset_modelling_female.ipynb  test.ipynb
01_activities/experiments/: Generating Visuals.ipynb  Logistic Regression.ipynb  app.py  dataset_modelling_male.ipynb  exploring-data.ipynb  multicollinearity.ipynb  train_diabetes_model.py
01_activities/experiments/model_artifacts/: Readme.ipynb
02_src/: Cost Saving Model.ipynb  Generating Visuals.ipynb
02_src/model_artifacts/: diabetes_risk_model.pkl
03_data/processed/: diabetes_data_with_agegroup.xlsx
