[project]
name = "ds4-env"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "argparse>=1.4.0",
    "arrow>=1.3.0",
    "credit>=0.0.1",
    "dask>=2025.9.0",
    "datetime>=5.5",
    "dtreeviz>=2.3.2",
    "graphviz>=0.21",
    "hyperopt>=0.2.7",
    "ipykernel>=6.30.1",
    "kmodes>=0.12.2",
    "mlflow>=3.3.2",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "prince>=0.16.6",
    "pyarrow>=21.0.0",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "statsmodels>=0.14.6",
    "ucimlrepo>=0.0.7",
    "utils>=1.0.2",
    "xgboost>=3.2.0",
    "yfinance>=0.2.65",
]
